<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/message_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_message_label"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="18sp" android:textStyle="bold" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/edt_message"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_message_label"
            android:inputType="text" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:hint="@string/message_example"/>
    <TextView
            android:text="@string/phone_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_phone_label"
            android:textSize="18sp" android:textStyle="bold" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/edt_message"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/edt_phone"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_phone_label" android:inputType="phone"
            android:hint="@string/phone_example"/>
    <TextView
            android:text="@string/freq_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_freq_label"
            android:textSize="18sp" android:textStyle="bold" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/edt_phone"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/edt_freq"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_freq_label" android:inputType="number"
            android:digits="0123456789" android:hint="@string/freq_example"/>
    <Button
            android:text="@string/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_toggle" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/edt_freq"/>
</android.support.constraint.ConstraintLayout>